Solved the overflow issue

--- a/style/main.css
+++ b/style/main.css
@@ -101,7 +101,6 @@ body{
 /*About Me*/
 .about{
     margin-bottom: 30px;
-    overflow: hidden;
 }
 
 .about img{
